# CommentValidator

./: .gitignore  README.md  app.py  background_main.py  dataset_atualizado.csv  modelo_hibrido.pkl  pipeline_config.py  preprocess.py  pyproject.toml  requirements.txt  train_model.py  update_dataset.py
.streamlit/: config.toml
data/processed/: dataset_atualizado.csv
models/: metrics.json  modelo_hibrido.pkl
src/app/: main.py
src/jobs/: add_negativos.py  classify_csv.py  update_dataset.py
src/sentimentizer/: analyzer.py  pipeline.py
src/training/: train.py
