[project]
name = "mfieldvalidator"
version = "0.1.0"
description = ""
authors = [
    {name = "Herbert Souto",email = "herbert-93@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textblob (>=0.19.0,<0.20.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
