[project]
name = "commentvalidator"
version = "0.1.0"
description = ""
authors = [
    { name = "Herbert Souto", email = "herbert-93@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "joblib>=1.4.2,<2.0.0",
    "streamlit>=1.44.1,<2.0.0",
    "nltk>=3.9,<4.0.0",
    "requests>=2.32,<3.0.0",
    "pysentimiento>=0.7.3,<1.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "imbalanced-learn>=0.12.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentimentizer", "src/app", "src/training", "src/jobs"]
